Spacing fix

--- a/site/site.css
+++ b/site/site.css
@@ -36,7 +36,7 @@ h1 {
     text-overflow: clip;
 }
 
-.container p:last-of-type {
+.container > p:last-of-type {
     margin-bottom: 0;
 }
 
